web/public/static/css/dashboard.css
.content {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: flex-start;
    position: relative;
    top: 10vh;
}

.box-content {
    max-height: 75vh;
    overflow-x: hidden;
    overflow-y: auto;
}

.entry {
    display: flex;
    justify-content: space-between;

    overflow-x: scroll;
}

.entry .left {
    flex-basis: 67%;
}

.entry .left .link {
    display: inline-block;
    margin: 0.35em auto auto;
    font-weight: bold;
}

.entry .right {
    flex-basis: 33%;
    text-align:  right;
}

.entry .buttons {
    display: flex;
    justify-content: flex-end;
    flex-direction: column;
}

/* move the buttons down when screen gets smaller */
@media (max-width: 1550px) {
    .entry {
        display: block;
    }

    .entry .right {
        text-align:  left;
    }

    .entry .left .link {
        margin: auto;
    }

    .entry .buttons {
        display: block;
    }

    .entry .buttons div {
        display: inline-block;
    }
  }

.addUserButton {
    margin: 0.6em auto;
    text-align: center;
}

.addUserButton a {
    display: block;
}

.pasteText {
    background-color: var(--background);

    padding: 0.4em;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    overflow-wrap: break-word;
}

.removeBottomRadius {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
}

